tests/snapshots/output/output_cyclomatic_covdir_files.json.snap
---
source: tests/output_test.rs
expression: json_output
---
{
  "project_folder": "./tests/seahorse/",
  "number_of_files_ignored": 1,
  "number_of_complex_files": 5,
  "metrics": [
    {
      "metrics": {
        "wcc_plain": 79.21478060046189,
        "wcc_quantized": 0.792147806004619,
        "crap": 123.95346471999996,
        "skunk": 53.51999999999998,
        "is_complex": true,
        "coverage": 86.62
      },
      "file": "app.rs",
      "file_path": "src/app.rs"
    },
    {
      "metrics": {
        "wcc_plain": 26.0,
        "wcc_quantized": 0.7222222222222222,
        "crap": 40.77958789800001,
        "skunk": 22.248000000000005,
        "is_complex": true,
        "coverage": 84.55
      },
      "file": "command.rs",
      "file_path": "src/command.rs"
    },
    {
      "metrics": {
        "wcc_plain": 24.31578947368421,
        "wcc_quantized": 0.7368421052631579,
        "crap": 33.468671704875,
        "skunk": 9.965999999999998,
        "is_complex": false,
        "coverage": 92.45
      },
      "file": "context.rs",
      "file_path": "src/context.rs"
    },
    {
      "metrics": {
        "wcc_plain": 0.53125,
        "wcc_quantized": 0.03125,
        "crap": 257.95924751059204,
        "skunk": 64.00160000000001,
        "is_complex": true,
        "coverage": 5.88
      },
      "file": "error.rs",
      "file_path": "src/error.rs"
    },
    {
      "metrics": {
        "wcc_plain": 34.696335078534034,
        "wcc_quantized": 0.7382198952879581,
        "crap": 48.328076389056,
        "skunk": 15.867199999999997,
        "is_complex": true,
        "coverage": 91.56
      },
      "file": "flag.rs",
      "file_path": "src/flag.rs"
    },
    {
      "metrics": {
        "wcc_plain": 1.5,
        "wcc_quantized": 0.5,
        "crap": 3.0,
        "skunk": 0.0,
        "is_complex": false,
        "coverage": 100.0
      },
      "file": "help.rs",
      "file_path": "src/help.rs"
    },
    {
      "metrics": {
        "wcc_plain": 0.07692307692307693,
        "wcc_quantized": 0.07692307692307693,
        "crap": 1.0,
        "skunk": 0.0,
        "is_complex": false,
        "coverage": 100.0
      },
      "file": "lib.rs",
      "file_path": "src/lib.rs"
    },
    {
      "metrics": {
        "wcc_plain": 0.0,
        "wcc_quantized": 0.0,
        "crap": 552.0,
        "skunk": 92.0,
        "is_complex": true,
        "coverage": 0.0
      },
      "file": "multiple_app.rs",
      "file_path": "examples/multiple_app.rs"
    },
    {
      "metrics": {
        "wcc_plain": 0.0,
        "wcc_quantized": 0.0,
        "crap": 20.0,
        "skunk": 16.0,
        "is_complex": false,
        "coverage": 0.0
      },
      "file": "single_app.rs",
      "file_path": "examples/single_app.rs"
    },
    {
      "metrics": {
        "wcc_plain": 45.56273764258555,
        "wcc_quantized": 0.6568441064638784,
        "crap": 1088.975078583745,
        "skunk": 240.66240000000008,
        "is_complex": false,
        "coverage": 77.21
      },
      "file": "PROJECT",
      "file_path": "-"
    },
    {
      "metrics": {
        "wcc_plain": 18.481675358844804,
        "wcc_quantized": 0.3997339006334482,
        "crap": 120.05433869139144,
        "skunk": 30.40031111111111,
        "is_complex": false,
        "coverage": 561.06
      },
      "file": "AVG",
      "file_path": "-"
    },
    {
      "metrics": {
        "wcc_plain": 79.21478060046189,
        "wcc_quantized": 0.792147806004619,
        "crap": 552.0,
        "skunk": 92.0,
        "is_complex": false,
        "coverage": 0.0
      },
      "file": "MAX",
      "file_path": "-"
    },
    {
      "metrics": {
        "wcc_plain": 0.0,
        "wcc_quantized": 0.0,
        "crap": 1.0,
        "skunk": 0.0,
        "is_complex": false,
        "coverage": 100.0
      },
      "file": "MIN",
      "file_path": "-"
    }
  ],
  "files_ignored": [
    "./tests/seahorse/src/action.rs"
  ],
  "complex_files": [
    {
      "metrics": {
        "wcc_plain": 79.21478060046189,
        "wcc_quantized": 0.792147806004619,
        "crap": 123.95346471999996,
        "skunk": 53.51999999999998,
        "is_complex": true,
        "coverage": 86.62
      },
      "file": "app.rs",
      "file_path": "src/app.rs"
    },
    {
      "metrics": {
        "wcc_plain": 34.696335078534034,
        "wcc_quantized": 0.7382198952879581,
        "crap": 48.328076389056,
        "skunk": 15.867199999999997,
        "is_complex": true,
        "coverage": 91.56
      },
      "file": "flag.rs",
      "file_path": "src/flag.rs"
    },
    {
      "metrics": {
        "wcc_plain": 26.0,
        "wcc_quantized": 0.7222222222222222,
        "crap": 40.77958789800001,
        "skunk": 22.248000000000005,
        "is_complex": true,
        "coverage": 84.55
      },
      "file": "command.rs",
      "file_path": "src/command.rs"
    },
    {
      "metrics": {
        "wcc_plain": 0.53125,
        "wcc_quantized": 0.03125,
        "crap": 257.95924751059204,
        "skunk": 64.00160000000001,
        "is_complex": true,
        "coverage": 5.88
      },
      "file": "error.rs",
      "file_path": "src/error.rs"
    },
    {
      "metrics": {
        "wcc_plain": 0.0,
        "wcc_quantized": 0.0,
        "crap": 552.0,
        "skunk": 92.0,
        "is_complex": true,
        "coverage": 0.0
      },
      "file": "multiple_app.rs",
      "file_path": "examples/multiple_app.rs"
    }
  ],
  "project_coverage": 77.21
}
